--- a/style.css
+++ b/style.css
@@ -101,3 +101,12 @@ li .fas {
     text-decoration: none;
     color: white;
 }
+
+
+@media all and (min-width:767px)
+{
+
+#logo img {
+    width: 450px;
+}
+}
