Background réseaux sociaux

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h2 {
 
 .share {
     padding: 40px 0;
-    background: url(https://cdn.pixabay.com/photo/2017/10/23/05/56/holiday-2880261_960_720.jpg) no-repeat center;
+    background: url(rsBackground.jpg) no-repeat center;
     background-size: cover;
 }
 
